[package]
name = "esparrier"
version = "0.1.0"
authors = ["Chen Xu <windoze@0d0a.com>"]
edition = "2021"
resolver = "2"

[patch.crates-io]
# smol = { git = "https://github.com/esp-rs-compat/smol" }
# polling = { git = "https://github.com/esp-rs-compat/polling" }
# socket2 = { git = "https://github.com/esp-rs-compat/socket2" }
# getrandom = { version = "0.2", git = "https://github.com/esp-rs-compat/getrandom.git" }
embedded-io = { git = "https://github.com/ivmarkov/embedded-io" }

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
const_env = "0.1"
anyhow = {version = "1", features = ["backtrace"]}
thiserror = "1.0"
log = "0.4"
lazy_static = "1.4"
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-svc = { version = "0.45", features = [] }
esp-idf-hal = "0.40"
embedded-svc = { version = "0.24", features = [] }
embedded-hal = "0.2"

smart-leds = "0.3"
ws2812-esp32-rmt-driver = "0.5"

[build-dependencies]
embuild = "0.31.1"
anyhow = "1"

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["usb_util"]
# The bindgen is not usable until there is a new release of esp-idf-sys
# @see https://github.com/esp-rs/esp-idf-sys/issues/180
# bindings_header = "usb_util/usb_util.h"
# bindings_module = "usb_util"
