[package]
name = "esparrier"
version = "0.1.0"
authors = ["Chen Xu <windoze@0d0a.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = [ "m5atoms3" ]
pio = ["esp-idf-sys/pio"]
m5atoms3lite = ["smart-leds", "ws2812-esp32-rmt-driver"]
m5atoms3 = ["embedded-graphics", "mipidsi", "display-interface-spi"]

[dependencies]
const_env = "0.1"
anyhow = {version = "1", features = ["backtrace"]}
thiserror = "1.0"
log = "0.4"
lazy_static = "1.4"
esp-idf-sys = { version = "0.33", features = ["binstart"] }
esp-idf-svc = { version = "0.46", features = [] }
esp-idf-hal = "0.41"
embedded-svc = { version = "0.25", features = [] }
embedded-hal = "0.2"

smart-leds = { version = "0.3", optional = true }
ws2812-esp32-rmt-driver = { version = "0.6", optional = true }
embedded-graphics = { version = "0.8", optional = true }
mipidsi = { version = "0.7", optional = true }
display-interface-spi = { version = "0.4", optional = true }

[build-dependencies]
embuild = "0.31.1"
anyhow = "1"

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["usb_util"]
# The bindgen is not usable until there is a new release of esp-idf-sys
# @see https://github.com/esp-rs/esp-idf-sys/issues/180
# bindings_header = "usb_util/usb_util.h"
# bindings_module = "usb_util"

[package.metadata.espflash]
partition_table = "partitions.csv" # Supports CSV and binary formats
# format          = "direct-boot"    # Can be 'esp-bootloader' or 'direct-boot'
